bat_core/main/default/objects/BatchChunkLog__c/BatchChunkLog__c.object-meta.xml
<CustomObject>
    <description>Represents a batch chunk execution.</description>
    <label>Batch chunk log</label>
    <nameField>
        <displayFormat>Batch chunk log {000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch chunk log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>