bat_core/main/default/objects/BatchChunkLog__c/fields/EndTimeMillis__c.field-meta.xml
<CustomField>
    <fullName>EndTimeMillis__c</fullName>
    <defaultValue>0</defaultValue>
    <label>End time (millis)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>