bat_core/main/default/objects/BatchChunkLog__c/fields/JobDiffMillis__c.field-meta.xml
<CustomField>
    <fullName>JobDiffMillis__c</fullName>
    <formula>IF (
  NOT(ISBLANK(PreviousChunkLog__c)),
  PreviousChunkLog__r.RuntimeMillis__c - RuntimeMillis__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff since last job (milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>