bat_core/main/default/objects/BatchChunkLog__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>The job&#39;s identifier.</description>
    <label>Job ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>