bat_core/main/default/objects/BatchChunkLog__c/fields/PreviousChunkLog__c.field-meta.xml
<CustomField>
    <fullName>PreviousChunkLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous batch log</label>
    <referenceTo>BatchChunkLog__c</referenceTo>
    <relationshipLabel>Batch chunk log</relationshipLabel>
    <relationshipName>Batch_chunk_log</relationshipName>
    <type>Lookup</type>
</CustomField>