bat_core/main/default/objects/BatchChunkLog__c/fields/RuntimeMillis__c.field-meta.xml
<CustomField>
    <fullName>RuntimeMillis__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Runtime (milliseconds)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>