bat_core/main/default/objects/BatchChunkLog__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>Chunk execution start time.</description>
    <label>Start time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>