bat_core/main/default/objects/BatchChunkLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>JobDiffMillis__c</columns>
    <columns>JobId__c</columns>
    <columns>RuntimeMillis__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>